# crossref-rs

./: Cargo.toml
src/: error.rs  lib.rs
src/query/: facet.rs  journals.rs  mod.rs  works.rs
src/response/: journal.rs  mod.rs  work.rs
tests/: integration.rs
