[package]
name = "crossref"
edition = "2021"
version = "0.1"
author = "Emil Lindfors"


[dependencies]
common = { path = "../common"}
reqwest = { version = "0.11", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
failure = "0.1"
serde_json = "1.0"
chrono =  { version = "0.4", features = ["serde"] }
structopt =  { version = "0.2", optional = true }
url = "1.7"
pretty_env_logger = { version = "0.3", optional = true }
async-iterator = {path = "../async-iterator" }

[features]
cli = ["structopt", "pretty_env_logger"]
