[package]
name = "crossref-rs"
edition = "2021"
version = "0.1.0"
author = "Emil Lindfors"


[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
failure = "0.1"
serde_json = "1.0"
chrono =  { version = "0.4", features = ["serde"] }
structopt =  { version = "0.2", optional = true }
url = "1.7"
pretty_env_logger = { version = "0.3", optional = true }
async-iterator = "2.3"

[features]
cli = ["structopt", "pretty_env_logger"]
