[package]
name = "crossref-rs"
edition = "2021"
version = "0.1.0"
author = "Emil Lindfors"


[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json", "stream"]}
serde = { version = "1.0", features = ["derive"] }
failure = "0.1"
serde_json = "1.0"
chrono =  { version = "0.4", features = ["serde"] }
structopt =  { version = "0.2", optional = true }
url = "1.7"
pretty_env_logger = { version = "0.3", optional = true }
async-iterator = "2.3"
tracing = "0.1.40"
futures-util = "0.3.30"
simd-json = "0.14.0-rc.3"


[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.2.16"
mimalloc = "0.1.43"

[features]
cli = ["structopt", "pretty_env_logger"]
